--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body{
-	background: lightyellow;
+	background: #F8F676;
 	text-align: center; 
+  background-color: #fffb00;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='90' height='90' viewBox='0 0 90 90'%3E%3Ccircle fill='%23fffb00' cx='45' cy='45' r='10'/%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Ccircle cx='0' cy='90' r='10'/%3E%3Ccircle cx='90' cy='90' r='10'/%3E%3Ccircle cx='90' cy='0' r='10'/%3E%3Ccircle cx='0' cy='0' r='10'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 h1 { 
-	color: yellow; 
+	color: darkblue; 
 	font-family: 'MuseoModerno', cursive; 
+}
+
+h2 { 
+  color: red; 
+  font-family: 'MuseoModerno', cursive; 
 }
 
 h3, ul {
@@ -28,36 +35,22 @@ h3, ul {
 
 .frame {
   border: 4px solid red;
+  border-radius: 50 px;
+  border-shadow: 10px 10px 10px lightgrey;
   margin: 100px;
+  padding: 30px;
+  box-shadow:10px 10px 10px darkred ;
+
 }
 
 .drapeau {
   background: black;
-  height: 10px;
-  width: 20px;
+  height: 300px;
+  width: 600px;
   display: flex; 
   justify-content: space-around;
   align-items: center
 }
-
-.blue {
-  background: blue;
-  height: 10px;
-  width: 20px;
-
-}
-
-.white {
-  background: white;
-  height: 10px;
-  width: 20px;
-
-  }
-
-  .red {
-  background: red;
-  height: 10px;
-  width: 20px;
 
   }
 
@@ -65,7 +58,7 @@ h3, ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #e7d4b5;
+  background: #FFEAD9;
 }
 
 .menu {
@@ -78,3 +71,11 @@ h3, ul {
   color: #9F3442;
   width:100px;
 }
+
+.navbarbas {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #FFEAD9;
+}
+
